--- a/html/merch.css
+++ b/html/merch.css
@@ -4,25 +4,58 @@
 }
 
 header {
-    height: 95px;
+    height: 72px;
     background-color: black;
+    align-items: center;
+    display: flex;
 }
 
 a {
     text-decoration: none;
     font-weight: 500;
     color: white;
+    font-size: 20px;
 }
 
 body {
+    background: rgb(138,120,120);
+    background: radial-gradient(circle, rgba(138,120,120,1) 20%, rgba(17,17,17,1) 100%);
     font-family: inter;
-    height: 2000px;
-    background-color:blanchedalmond;
 }
 
 .logo {
     position: absolute;
-    z-index: 10;
-    width: 20px;
-    height: 20px;
+    top: 1.5px;
+    left: 3%;
 }
+
+.headbutton {
+    display: flex;
+    justify-content: center;
+}
+
+.homebutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-left: 130px;
+    padding-right: 130px;
+    margin-left: 180px;
+}
+
+.musicbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-left: 130px;
+    padding-right: 130px;
+}
+
+.tourbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-left: 130px;
+    padding-right: 130px;
+}
+
+.merchbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-left: 130px;
+    padding-right: 130px;
+}
+
