--- a/html/music.css
+++ b/html/music.css
@@ -1,4 +1,24 @@
 body {
+    font-family: 'Inter';font-size: 17px;
+    background: rgb(138,120,120);
+background: radial-gradient(circle, rgba(138,120,120,1) 14%, rgba(17,17,17,1) 100%);
+}
+
+
+h2 {
+    color: black;
+    font-weight: bold;
+    background-color: #b66b6b;
+    border-color: #B66B6B;
+    text-align: center;
+    padding: 30px 120px 30px 120px;
+    width: 70%;
+    margin: auto;
+    margin-bottom: 40px;
+    text-transform: uppercase; 
+}
+
+body {
     background-color: #1a1a1a;
     color: #ffffff;
     font-family: Arial, sans-serif;
@@ -22,15 +42,16 @@ h1 {
 .album-item {
     background-color: #333;
     padding: 15px;
-    border-radius: 10px;
+    border-radius: 40px;
     box-shadow: 0 4px 8px rgba(0, 0, 0, 0.3);
     text-align: center;
 }
 .album-item img {
-    width: 100%;
+    width: 80%;
     height: auto;
     border-radius: 5px;
     margin-bottom: 15px;
+    margin-top: 20px;
 }
 .album-title {
     font-size: 1.5em;
@@ -43,3 +64,4 @@ ol {
     list-style-type: decimal;
     padding-left: 20px;
 }
+
