--- a/html/style.css
+++ b/html/style.css
@@ -1,1 +1,76 @@
-        
+* {
+    padding: 0;
+    margin: 0;
+}
+
+header {
+    width: 100%;
+    height: 92px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 120px;
+}
+
+body {
+    background: rgb(12,29,30);
+    background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
+    font-family: inter;
+    overflow-x: hidden;
+}
+
+.logo {
+    position: absolute;
+    top: 1.5px;
+    left: 3.25%;
+    padding: 10px;
+}
+
+.headbutton {
+    display: flex;
+    justify-content: center;
+}
+
+.homebutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+
+.musicbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.tourbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.merchbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.collections {
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    margin-top: 50px;
+    color: white;
+    font-weight: 500;
+    font-size: 30px;
+    flex-direction: column;
+}
