--- a/html/merch.css
+++ b/html/merch.css
@@ -4,10 +4,12 @@
 }
 
 header {
+    width: 100%;
     height: 92px;
     background-color: black;
-    align-items: center;
     display: flex;
+    align-items: center;
+    justify-content: space-around;
 }
 
 a {
@@ -15,12 +17,14 @@ a {
     font-weight: 500;
     color: white;
     font-size: 20px;
+    padding-left: 120px;
 }
 
 body {
     background: rgb(12,29,30);
     background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
     font-family: inter;
+    overflow-x: hidden;
 }
 
 .logo {
@@ -37,34 +41,25 @@ body {
 
 .homebutton {
     border-left: 2px rgb(99, 99, 99) solid;
-    padding-left: 135px;
-    padding-right: 135px;
-    margin-left: 200px;
     padding-top: 10px;
-        padding-bottom: 10px;
+    padding-bottom: 10px;
 
 }
 
 .musicbutton {
     border-left: 2px rgb(99, 99, 99) solid;
-    padding-left: 135px;
-    padding-right: 135px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .tourbutton {
     border-left: 2px rgb(99, 99, 99) solid;
-    padding-left: 135px;
-    padding-right: 135px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .merchbutton {
     border-left: 2px rgb(99, 99, 99) solid;
-    padding-left: 135px;
-    padding-right: 135px;
     padding-top: 10px;
     padding-bottom: 10px;
 }
