--- a/html/music.css
+++ b/html/music.css
@@ -1,10 +1,70 @@
-body {
-    background-color: #1a1a1a;
-    color: #ffffff;
-    font-family: Arial, sans-serif;
-    margin: 0;
+* {
     padding: 0;
+    margin: 0;
 }
+
+body {
+    background: rgb(12,29,30);
+    background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
+    font-family: inter;
+    overflow-x: hidden;
+    color: #ffffff;
+}
+
+header {
+    width: 100%;
+    height: 92px;
+    background-color: black;
+    display: flex;
+    align-items: center;
+    justify-content: space-around;
+}
+
+a {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 120px;
+}
+
+.logo {
+    position: absolute;
+    top: 1.5px;
+    left: 3.25%;
+    padding: 10px;
+}
+
+.headbutton {
+    display: flex;
+    justify-content: center;
+}
+
+.homebutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+
+}
+
+.musicbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.tourbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
+.merchbutton {
+    border-left: 2px rgb(99, 99, 99) solid;
+    padding-top: 10px;
+    padding-bottom: 10px;
+}
+
 .container {
     max-width: 1200px;
     margin: 0 auto;
