--- a/html/merch.css
+++ b/html/merch.css
@@ -1,6 +1,7 @@
 * {
     padding: 0;
     margin: 0;
+
 }
 
 header {
@@ -78,4 +79,18 @@ body {
     font-weight: 500;
     font-size: 30px;
     flex-direction: column;
+    gap: 16px;
+}
+
+.merchsection1 {
+    color: white;
+    font-size: 35px;
+    font-weight: 600;
+}
+
+.men {
+    padding-left: 50px;
+    padding-top: 70px;
+    padding-bottom: 30px;
+    border-bottom: 2px rgb(99, 99, 99) solid;
 }
