--- a/html/style.css
+++ b/html/style.css
@@ -16,18 +16,12 @@ body {
 }
 
 
-.image {
-    width: 100%; 
+
+.image-blurry-border {
+    max-width: 100%;
     height: auto;
-    object-fit: cover;
-    border-radius: 8px; 
-    margin-bottom: 30px; 
-    mask-image: 
-        radial-gradient(farthest-corner, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0)), 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%); 
-    -webkit-mask-image: 
-        radial-gradient(farthest-corner, rgba(0, 0, 0, 1) 70%, rgba(0, 0, 0, 0)), 
-        linear-gradient(to bottom, rgba(0, 0, 0, 0) 50%, rgba(0, 0, 0, 1) 100%); 
+    box-shadow: 0 0 25px 15px rgba(67, 164, 224, 0.288); 
+    border-radius: 10px; 
 }
 
 
