--- a/html/style.css
+++ b/html/style.css
@@ -20,7 +20,7 @@ body {
 .image-blurry-border {
     max-width: 100%;
     height: auto;
-    box-shadow: 0 0 25px 15px rgba(67, 164, 224, 0.288); 
+    box-shadow: 0 0 25px 15px rgba(62, 150, 205, 0.337); 
     border-radius: 10px; 
 }
 
@@ -63,7 +63,7 @@ p {
     .quote {
         font-size: 1em;
     }
-=======
+
 * {
     padding: 0;
     margin: 0;
@@ -139,4 +139,5 @@ body {
     font-weight: 500;
     font-size: 30px;
     flex-direction: column;
+}
 }
