--- a/html/merch.css
+++ b/html/merch.css
@@ -28,12 +28,10 @@ body {
     background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
     font-family: inter;
     overflow-x: hidden;
+    min-height: 100vh;
 }
 
 .logo {
-    position: absolute;
-    top: 1.5px;
-    left: 3.25%;
     padding: 10px;
 }
 
@@ -85,7 +83,6 @@ body {
 }
 
 .merchsection1 {
-    background: linear-gradient( rgb(18, 43, 45) 12%, rgba(7,40,53,1) 100%);
     width: fit-content;
     height: fit-content;
     padding: 5px;
@@ -93,6 +90,7 @@ body {
     border-radius: 18px;
     margin-top: 60px;
     display: flex;
+    gap: 175px;
 }
 
 .men {
@@ -107,4 +105,25 @@ body {
     color: white;
     font-size: 22px;
     text-align: center;
+}
+
+footer {
+    height: 70px;
+    background: black;
+}
+
+.footertext {
+    font-family: inter;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+}
+
+.merchbox1 {
+    background: linear-gradient( rgb(18, 43, 45) 12%, rgba(7,40,53,1) 100%);
+    border: solid 2px rgb(80, 79, 79);
+    border-radius: 18px;
+    padding: 10px;
 }
