--- a/html/tour.css
+++ b/html/tour.css
@@ -1,8 +1,57 @@
+* {
+  padding: 0;
+  margin: 0;
+
+}
+header {
+  width: 100%;
+  height: 92px;
+  background-color: black;
+  display: flex;
+  align-items: center;
+  justify-content: space-around;
+}
+
+a {
+  text-decoration: none;
+  font-weight: 500;
+  color: white;
+  font-size: 20px;
+  padding-left: 140px;
+  padding-right: 80px;
+
+}
+.logo {
+  padding: 10px;
+}
+
+.homebutton {
+  border-left: 2px rgb(99, 99, 99) solid;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.musicbutton {
+  border-left: 2px rgb(99, 99, 99) solid;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.tourbutton {
+  border-left: 2px rgb(99, 99, 99) solid;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
+
+.merchbutton {
+  border-left: 2px rgb(99, 99, 99) solid;
+  padding-top: 10px;
+  padding-bottom: 10px;
+}
 body {
     background: rgb(138,120,120);
     background: radial-gradient(circle, rgba(138,120,120,1) 14%, rgba(17,17,17,1) 100%);
     font-family: 'Inter';
-    padding: 40px;
 }
 .all{
     column-count: 2;
