--- a/html/style.css
+++ b/html/style.css
@@ -84,7 +84,9 @@ a {
     font-weight: 500;
     color: white;
     font-size: 20px;
-    padding-left: 120px;
+    padding-left: 140px;
+    padding-right: 80px;
+
 }
 
 body {
