--- a/html/music.css
+++ b/html/music.css
@@ -117,3 +117,18 @@ ol {
     list-style-type: decimal;
     padding-left: 20px;
 }
+
+footer {
+    height: 70px;
+    background: black;
+    margin-top: 80px;
+}
+
+.footertext {
+    font-family: inter;
+    color: white;
+    display: flex;
+    flex-direction: row;
+    justify-content: space-between;
+    padding: 10px;
+}
