--- a/html/music.css
+++ b/html/music.css
@@ -4,10 +4,10 @@
 }
 
 h2 {
-    color: black;
+    color: white;
     font-weight: bold;
-    background-color: #b66b6b;
-    border-color: #B66B6B;
+    background-color: #333;
+    border-color: #333;
     text-align: center;
     padding: 30px 120px 30px 120px;
     width: 70%;
@@ -116,4 +116,9 @@ h1 {
 ol {
     list-style-type: decimal;
     padding-left: 20px;
+}
+
+.hits {
+    padding: 8rem;
+    gap: 12px;
 }
