--- a/html/merch.css
+++ b/html/merch.css
@@ -83,14 +83,14 @@ body {
 }
 
 .merchsection1 {
-    width: fit-content;
+    width: 100%;
     height: fit-content;
     padding: 5px;
     border: none;
     border-radius: 18px;
     margin-top: 60px;
     display: flex;
-    gap: 175px;
+    justify-content: space-around;
 }
 
 .men {
@@ -127,4 +127,8 @@ footer {
     border: solid 2px rgb(80, 79, 79);
     border-radius: 5px;
     padding: 10px;
+}
+
+a:hover {
+    font-weight: 500;
 }
