--- a/html/tour.css
+++ b/html/tour.css
@@ -49,6 +49,16 @@ a {
   padding-top: 10px;
   padding-bottom: 10px;
 }
+
+.menu {
+  display: none;
+}
+
+
+#menu-toggle {
+  display: none;
+} 
+
 body {
     background: rgb(138,120,120);
     background: radial-gradient(circle, rgba(138,120,120,1) 14%, rgba(17,17,17,1) 100%);
@@ -240,4 +250,79 @@ footer {
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
+}
+
+@media (max-width: 768px) {
+  #menu-toggle {
+      display: none;
+  }
+  
+  
+  .burger {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 30px;
+      height: 25px;
+      cursor: pointer;
+      margin: 20px;
+  }
+  
+  .burger span {
+      width: 100%;
+      height: 3px;
+      background-color: #ffffff;
+      transition: 0.3s;
+  }
+  
+ 
+  .menu {
+      display: none;
+      background-color: #0c1d1e;
+      position: absolute;
+      top: 60px;
+      width: 100%;
+      text-align: center;
+  }
+  
+  .menu ul {
+      list-style: none;
+  }
+  
+  .menu ul li {
+      padding: 10px;
+  }
+  
+  .menu ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-family: inter;
+  }
+  
+  
+  #menu-toggle:checked + .burger + .menu {
+      display: block;
+  }
+  
+  
+  #menu-toggle:checked + .burger span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+  }
+  
+  #menu-toggle:checked + .burger span:nth-child(2) {
+      opacity: 0;
+  }
+  
+  #menu-toggle:checked + .burger span:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+  }
+
+  header {
+      display: none;
+  }
+
+  a {
+      padding: 0px;
+  }
 }
