--- a/html/music.css
+++ b/html/music.css
@@ -34,16 +34,6 @@ header {
     justify-content: space-around;
 }
 
-a {
-    text-decoration: none;
-    font-weight: 500;
-    color: white;
-    font-size: 20px;
-    padding-left: 140px;
-    padding-right: 80px;
-
-}
-
 .logo {
     position: absolute;
     top: 1.5px;
@@ -52,30 +42,59 @@ a {
 }
 
 .headbutton {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 140px;
+    padding-right: 80px;
     display: flex;
     justify-content: center;
 }
 
 .homebutton {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 140px;
+    padding-right: 80px;
     border-left: 2px rgb(99, 99, 99) solid;
     padding-top: 10px;
     padding-bottom: 10px;
-
 }
 
 .musicbutton {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 140px;
+    padding-right: 80px;
     border-left: 2px rgb(99, 99, 99) solid;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .tourbutton {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 140px;
+    padding-right: 80px;
     border-left: 2px rgb(99, 99, 99) solid;
     padding-top: 10px;
     padding-bottom: 10px;
 }
 
 .merchbutton {
+    text-decoration: none;
+    font-weight: 500;
+    color: white;
+    font-size: 20px;
+    padding-left: 140px;
+    padding-right: 80px;    
     border-left: 2px rgb(99, 99, 99) solid;
     padding-top: 10px;
     padding-bottom: 10px;
@@ -122,9 +141,11 @@ ol {
 }
 
 footer {
-    height: 70px;
+    width: 100%;
+    height: 100%;
     background: black;
     margin-top: 80px;
+    border-top: 1px solid rgb(86, 86, 86);
 }
 
 .footertext {
@@ -132,8 +153,74 @@ footer {
     color: white;
     display: flex;
     flex-direction: row;
-    justify-content: space-between;
+    justify-content: space-evenly;
     padding: 10px;
+    padding-top: 40px;
+}
+
+a {
+    font-family: inter;
+    font-weight: 400;
+    color: rgb(173, 173, 173);
+    text-decoration: none;
+}
+
+a:hover {
+    font-weight: 900;
+    color: rgb(1, 165, 194);
+}
+
+.copyright {
+    padding-right: 50px;
+}
+
+.contact {
+    padding-right: 40px;
+    padding-left: 15px;
+}
+
+.terms {
+    padding-right: 35px;
+    padding-left: 15px;
+}
+
+.privacy {
+    padding-left: 15px;
+    padding-right: 15px;
+}
+
+.disc {
+    padding-right: 30px;
+    padding-left: 30px;
+}
+
+.yout {
+    padding-right: 30px;
+    padding-left: 5px;
+}
+
+.spot {
+    padding-left: 15px;
+}
+
+.homebutton:hover {
+    font-weight: 800;
+    color: rgb(1, 165, 194);
+}
+
+.musicbutton:hover {
+    font-weight: 800;
+    color: rgb(1, 165, 194);
+}
+
+.tourbutton:hover {
+    font-weight: 800;
+    color: rgb(1, 165, 194);
+}
+
+.merchbutton:hover {
+    font-weight: 800;
+    color: rgb(1, 165, 194);
 }
 
 .hits {
@@ -181,9 +268,4 @@ footer {
         flex-direction: column;
         height: auto;
     }
-}
-
-
-a:hover {
-    font-weight: 500;
 }
