parandused music,tour

--- a/html/music.css
+++ b/html/music.css
@@ -140,10 +140,18 @@ footer {
     padding: 8rem;
     gap: 12px;
 }
-
+.songlist{
+    display: flex;
+    justify-content: space-evenly;
+    text-align: center;
+}
 .text{
     text-align: center;
-    column-count: 2;
+    float: left;
+  
+}
+.text2{
+text-align: center;
 }
 
 @media (max-width: 768px) {
@@ -161,6 +169,15 @@ footer {
     header {
         flex-direction: column;
         height: auto;
+    }
+
+    .songlist{
+        display: flex;
+        flex-direction:row;
+        justify-content: space-evenly;
+        font-size: 10px;
+        width: max-content;
+        align-items: center;
     }
 
 }
@@ -181,4 +198,12 @@ footer {
         flex-direction: column;
         height: auto;
     }
+
+    .songlist{
+        display: flex;
+        flex-direction:row;
+        font-size: 10px;
+        width: max-content;
+    }
+    
 }
