--- a/html/tour.css
+++ b/html/tour.css
@@ -20,8 +20,29 @@ a {
   font-size: 20px;
   padding-left: 140px;
   padding-right: 80px;
-
 }
+
+body {
+  background: rgb(12,29,30);
+  background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
+  font-family: inter;
+  overflow-x: hidden;
+  color: #ffffff;
+}
+
+.logo {
+    position: absolute;
+    top: 1.5px;
+    left: 3.25%;
+    padding: 10px;
+}
+
+.headbutton {
+    display: flex;
+    justify-content: center;
+}
+
+
 .logo {
   padding: 10px;
 }
@@ -49,14 +70,8 @@ a {
   padding-top: 10px;
   padding-bottom: 10px;
 }
-body {
-    background: rgb(138,120,120);
-    background: radial-gradient(circle, rgba(138,120,120,1) 14%, rgba(17,17,17,1) 100%);
-    font-family: 'Inter';
-}
-.all{
-    column-count: 2;
-}
+
+
 .vertical {
     margin-left: 300px;
     border-left: 2px solid #7777;
@@ -77,7 +92,10 @@ button{
     width: 100px;
     height: 50px;
 }
-
+.menu{
+  float: left;
+  width: 20%;
+}
 .flex-container {
     display: flex;
     justify-content: space-between;
@@ -126,12 +144,16 @@ button{
     background-color: #333333;
     color: white;
     margin: 10px;
-    padding: 15px;
+    padding: 40px;
     width: 600px;
     border-radius: 12px;
-    float: right;
     display: flex;  
-  flex-wrap: wrap;
+    flex-wrap: wrap;
+    float: right;
+    width: 20%;
+    margin-top: 7px;
+    text-align: left;
+    
   }
   .thrid{
     background-color: #C182B8;
@@ -155,89 +177,65 @@ button{
   margin-left: auto;
   display: block;
   }
+
   .head{
     font-size: 20px;
     font-weight: bold;
    
   }
-
-* {
-    padding: 0;
-    margin: 0;
-}
-
-header {
-    width: 100%;
-    height: 92px;
-    background-color: black;
-    display: flex;
-    align-items: center;
-    justify-content: space-around;
-}
-
-a {
-    text-decoration: none;
-    font-weight: 500;
-    color: white;
-    font-size: 20px;
-    padding-left: 120px;
-}
-
-body {
-    background: rgb(12,29,30);
-    background: linear-gradient(90deg, rgba(12,29,30,1) 12%, rgba(7,40,53,1) 100%);
-    font-family: inter;
-    overflow-x: hidden;
-}
-
-.logo {
-    position: absolute;
-    top: 1.5px;
-    left: 3.25%;
-    padding: 10px;
-}
-
-.headbutton {
-    display: flex;
-    justify-content: center;
-}
-
-.homebutton {
-    border-left: 2px rgb(99, 99, 99) solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-
-}
-
-.musicbutton {
-    border-left: 2px rgb(99, 99, 99) solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.tourbutton {
-    border-left: 2px rgb(99, 99, 99) solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-.merchbutton {
-    border-left: 2px rgb(99, 99, 99) solid;
-    padding-top: 10px;
-    padding-bottom: 10px;
-}
-
-footer {
+  footer {
   height: 70px;
   background: black;
   margin-top: 80px;
-}
+  }
 
-.footertext {
+  .footertext {
   font-family: inter;
   color: white;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   padding: 10px;
-}
+  }
+  @media (max-width: 768px){
+    a{
+      padding: 20px 60px;
+      width: 70%;
+    }
+    
+    header{
+      flex-direction: column;
+      height: auto;
+    }
+    
+    .second{
+      width: 100%;
+    }
+  }
+  @media (max-width: 480px) {
+    a{
+      padding-left: 10px;
+      padding-right: 10px;
+      font-size: 16px;
+    }
+    header{
+      flex-direction: column;
+      height: auto;
+    }
+    
+    .second{
+      width: 100%;
+    }
+    
+  }
+
+
+
+
+
+
+
+
+
+
+
