--- a/html/tour.css
+++ b/html/tour.css
@@ -53,7 +53,7 @@ body {
   padding-bottom: 10px;
 }
 
-.menu {
+.burger-menu {
   display: none;
 }
 
@@ -71,6 +71,13 @@ body {
     background: rgb(138,120,120);
     background: radial-gradient(circle, rgba(138,120,120,1) 14%, rgba(17,17,17,1) 100%);
     font-family: 'Inter';
+    display: flex;
+    flex-direction: column;
+}
+
+.main-content {
+    display: flex;
+    justify-content: space-around;
 }
 
 .all{
@@ -189,8 +196,8 @@ button{
   .head{
     font-size: 20px;
     font-weight: bold;
-   
   }
+
   footer {
   height: 70px;
   background: black;
@@ -205,6 +212,7 @@ button{
   justify-content: space-between;
   padding: 10px;
   }
+
   @media (max-width: 768px){
     a{
       padding: 20px 60px;
@@ -220,6 +228,7 @@ button{
       width: 100%;
     }
   }
+
   @media (max-width: 480px) {
     a{
       padding-left: 10px;
@@ -235,7 +244,78 @@ button{
       width: 100%;
     }
     
+    #menu-toggle {
+      display: none;
+    }
+
+  .burger {
+      display: flex;
+      flex-direction: column;
+      justify-content: space-around;
+      width: 30px;
+      height: 25px;
+      cursor: pointer;
+      margin: 20px;
   }
+  
+  .burger span {
+      width: 100%;
+      height: 3px;
+      background-color: #ffffff;
+      transition: 0.3s;
+  }
+  
+ 
+  .burger-menu {
+      display: none;
+      background-color: #0c1d1e;
+      position: absolute;
+      top: 60px;
+      width: 100%;
+      text-align: center;
+  }
+  
+  .nurger-menu ul {
+      list-style: none;
+  }
+  
+  .burger-menu ul li {
+      padding: 10px;
+  }
+  
+  .burger-menu ul li a {
+      color: white;
+      text-decoration: none;
+      font-size: 18px;
+      font-family: inter;
+  }
+  
+  
+  #menu-toggle:checked + .burger + .menu {
+      display: block;
+  }
+  
+  
+  #menu-toggle:checked + .burger span:nth-child(1) {
+      transform: rotate(45deg) translate(5px, 5px);
+  }
+  
+  #menu-toggle:checked + .burger span:nth-child(2) {
+      opacity: 0;
+  }
+  
+  #menu-toggle:checked + .burger span:nth-child(3) {
+      transform: rotate(-45deg) translate(5px, -5px);
+  }
+
+  header {
+      display: none;
+  }
+
+  a {
+      padding: 0px;
+  }
+}
 
 body {
     background: rgb(12,29,30);
@@ -326,81 +406,6 @@ a {
   font-weight: 400;
   color: rgb(173, 173, 173);
   text-decoration: none;
-}
-
-@media (max-width: 768px) {
-  #menu-toggle {
-  display: none;
-  }
-  
-  
-  .burger {
-      display: flex;
-      flex-direction: column;
-      justify-content: space-around;
-      width: 30px;
-      height: 25px;
-      cursor: pointer;
-      margin: 20px;
-  }
-  
-  .burger span {
-      width: 100%;
-      height: 3px;
-      background-color: #ffffff;
-      transition: 0.3s;
-  }
-  
- 
-  .menu {
-      display: none;
-      background-color: #0c1d1e;
-      position: absolute;
-      top: 60px;
-      width: 100%;
-      text-align: center;
-  }
-  
-  .menu ul {
-      list-style: none;
-  }
-  
-  .menu ul li {
-      padding: 10px;
-  }
-  
-  .menu ul li a {
-      color: white;
-      text-decoration: none;
-      font-size: 18px;
-      font-family: inter;
-  }
-  
-  
-  #menu-toggle:checked + .burger + .menu {
-      display: block;
-  }
-  
-  
-  #menu-toggle:checked + .burger span:nth-child(1) {
-      transform: rotate(45deg) translate(5px, 5px);
-  }
-  
-  #menu-toggle:checked + .burger span:nth-child(2) {
-      opacity: 0;
-  }
-  
-  #menu-toggle:checked + .burger span:nth-child(3) {
-      transform: rotate(-45deg) translate(5px, -5px);
-  }
-
-  header {
-      display: none;
-  }
-
-  a {
-      padding: 0px;
-  }
 }
 
 a:hover {
